<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegisterActivity"

    >

    <include layout="@layout/actionbar_toolbar"/>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="@dimen/pad"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/pad"

        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GreenTextb"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/CorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hin_CorreoElectronico"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GreenTextb"
            android:layout_marginTop="@dimen/mar"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hin_Nombre"
                android:textColorHint="@color/colorblack"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GreenTextb"
            android:layout_marginTop="@dimen/mar"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hin_Apellidos"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GreenTextb"
            android:layout_marginTop="@dimen/mar"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hin_Usuario"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GreenTextb"
            android:layout_marginTop="@dimen/mar"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hin_Contraseña"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@android:color/black"
                android:inputType="textPassword"

                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Crear"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAcountt"


            />
    </LinearLayout>

</ScrollView>


</android.support.design.widget.CoordinatorLayout>