<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="121dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:background="@drawable/logf"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padd"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/GreenText"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/CorreoElectronico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hin_CorreoElectronico"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@android:color/background_light" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/GreenText"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hin_Contraseña"
                        android:inputType="textPassword"
                        android:textColor="@android:color/background_light" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/ingreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login" />

                <Button
                    android:id="@+id/registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CreateAcoun"

                    />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>